crates/concrete_driver/tests/invalid_programs/invalid_borrow_mut.con
mod Simple {

    fn main() -> i32 {
        let mut x: i32 = 1;
        hello(&x);
        return x;
    }

    fn hello(a: &i32) {
        *a = 2;
    }
}
